| Bug #16893 | Crash in test 'fulltext_order_by' | ||
|---|---|---|---|
| Submitted: | 30 Jan 2006 12:36 | Modified: | 10 Feb 2006 22:10 |
| Reporter: | Joerg Bruehe | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S1 (Critical) |
| Version: | 4.1.18 | OS: | Other (OpenBSD) |
| Assigned to: | Sergey Vojtovich | Target Version: | |
[3 Feb 2006 11:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/2120
[7 Feb 2006 20:45]
Sergey Vojtovich
Fixed that fulltext query + union results in unexpected behaviour. Fixed in 4.1.19. This bug was already fixed in 5.0 and up in Semptember 2005.
[10 Feb 2006 22:10]
Paul DuBois
Noted in 4.1.19 changelog.
<para>
A <literal>FULLTEXT</literal> query in a
<literal>UNION</literal> could result in unexpected behavior.
(Bug #16893)
</para>

Description: Release build of 4.1.18, based on ChangeSet 1.2463 06/01/27 13:38:15 kent@mysql.com +1 -0 disabled.def: Enabled rpl_* tests now when bug fixed Crash occurred only once: ===== fulltext_order_by [ fail ] Errors are (from PATH/mysqltest-time) : mysqltest: At line NNN: query '(select b.id, b.betreff from t3 b) union (select b.id, b.betreff from t3 b) order by match(betreff) against ('+abc') desc' failed with wrong errno 2013 instead of 1191... mysqltest: At line NNN: unable to send query 'select distinct b.id, b.betreff from t3 b order by match(betreff) against ('+abc' in boolean mode) desc' (mysql_errno=2002 , errno=61) (the last lines may be the most important ones) ===== How to repeat: Detected by running the test suite.