BUG#16893: Crash in test 'fulltext_order_by' Fixed that fulltext query + union results in unexpected behaviour.